# RTRExtractor_GPU

./: .gitignore
Example_datasets/: cascade.txt
tools/: list2bin
tricore/: CMakeLists.txt  Makefile  tric_gpu
tricore/include/: tricount.h
tricore/src/: main.cpp  tricount_gpu.cu
